add song search
