# docs/swagger.json
@@ -18,13 +18,13 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Example: \u0026filter[name]=Song\u0026filter[group]=Muse",
+                        "description": "Example: ?filter[name]=Song\u0026filter[group]=Muse",
                         "name": "filter[\u003cname\u003e]",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Example: \u0026order_by=name:asc,link:desc,group. Default: asc",
+                        "description": "Example: ?order_by=name:asc,link:desc,group. Default: asc",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -70,9 +70,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "summary": "Add new song",
                 "parameters": [
                     {
@@ -96,10 +93,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/internal_controller_http_v1.songRoutes"
-                        }
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -161,9 +155,6 @@
             },
             "delete": {
                 "description": "Delete song by id",
-                "produces": [
-                    "application/json"
-                ],
                 "summary": "Delete song",
                 "parameters": [
                     {
@@ -176,10 +167,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/internal_controller_http_v1.songRoutes"
-                        }
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -198,9 +186,6 @@
             "patch": {
                 "description": "Edit song by id",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "summary": "Edit song",
@@ -231,10 +216,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/internal_controller_http_v1.songRoutes"
-                        }
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -327,10 +309,10 @@
                 "link": {
                     "type": "string"
                 },
-                "name": {
+                "releaseDate": {
                     "type": "string"
                 },
-                "releaseDate": {
+                "song": {
                     "type": "string"
                 }
             }
