# internal/entity/song.go
@@ -3,9 +3,9 @@ package entity
 import "time"
 
 type Song struct {
-	Id          int       `db:"id"`
-	Name        string    `db:"song_name"`
-	Group       string    `db:"group_name"`
-	Link        string    `db:"link"`
-	ReleaseDate time.Time `db:"release_date"`
+	Id          int       `db:"id" json:"id"`
+	Name        string    `db:"song_name" json:"song"`
+	Group       string    `db:"group_name" json:"group"`
+	Link        string    `db:"link" json:"link"`
+	ReleaseDate time.Time `db:"release_date" json:"releaseDate"`
 }
